# krypto

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yml  heatmap.py  main.py  results.csv  ticker.txt  visualize_optimization_summary.py
.cargo/: config.toml
.github/workflows/: rust.yml
binance-r-matrix/: Cargo.toml
binance-r-matrix/src/: config.rs  error.rs  errors.rs  historical_data.rs  historical_data_request.rs  interval.rs  lib.rs  math.rs  matrix.rs  technical_calculator.rs  technical_calulator.rs  test.rs  ticker_data.rs
front/: package-lock.json  package.json
front/src/app/: globals.css  layout.tsx  page.tsx
r-matrix/: Cargo.toml
r-matrix/src/: data.rs  dataset.rs  error.rs  errors.rs  lib.rs  math.rs  matricies.rs  matrix.rs  normalization_function.rs  relationship.rs  return_calculator.rs  rtest.rs  test.rs
r-matrix/src/r_matrix/: cmaes.rs  matrix.rs  mod.rs  r_matrix_decision_algorithm.rs  r_matrix_relationship.rs  r_matrix_test_result.rs  relationship.rs  test_data.rs
r-matrix/tests/: common.rs  dataset.rs  r_matrix.rs
r-matrix/tests/tests/: dataset.rs  mod.rs  r_matrix.rs
src/: algorithm.rs  algorithm_type.rs  args.rs  bar.rs  binance_interactions.rs  candle.rs  candlestick.rs  config.rs  config.yml  connection.rs  dataset.rs  error.rs  errors.rs  historical_data.rs  historical_data_request.rs  interval.rs  krypto_account.rs  krypto_app.rs  krypto_error.rs  lib.rs  live_data.rs  logging.rs  main.rs  math.rs  optimisation.rs  order_event.rs  relationship.rs  relationships.rs  technical_calculator.rs  technicals.rs  test_result.rs  testing.rs  ticker_data.rs  util.rs
src/algorithm/: algo.rs  mod.rs  pls.rs  test_data.rs
src/data/: candlestick.rs  dataset.rs  interval.rs  mod.rs  technicals.rs
src/data/dataset/: cache.rs  interval_data.rs  mod.rs  overall_dataset.rs  symbol_data.rs
src/trading/: krypto_account.rs  mod.rs  precision_data.rs
src/util/: date_utils.rs  math_utils.rs  matrix_utils.rs  mod.rs  test_util.rs
tests/: algorithm.rs  data.rs  integration_tests.rs
tests/common/: mod.rs
