[package]
name = "krypto"
version = "0.1.0"
edition = "2021"

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
ta = "0.5"
csv = "1.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "chrono",
    "time",
] }
tracing-appender = "0.2"
linfa = "0.7"
linfa-pls = "0.7"
ndarray = "0.15"
derive_builder = "0.20"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"