[package]
name = "krypto"
version = "0.1.0"
edition = "2021"

[dependencies]
binance-rs-async = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
ta = "0.5"
csv = "1.3.1"
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "chrono",
    "time",
] }
tracing-appender = "0.2"
linfa = "0.7"
linfa-pls = "0.7"
ndarray = "0.15"
derive_builder = "0.20"
genevo = "0.7"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"