[package]
name = "krypto"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
binance-rs-async = {version = "1.3.3", features = ["margin_api"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
bincode = { version = "2.0.1", features = ["serde"] } # Added serde feature for serialization
chrono = { version = "0.4.40", features = ["serde"] } # Added serde feature for NaiveDate
ta = "0.5"
csv = "1.3.1"
thiserror = "2.0.12" # Updated version slightly
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "chrono",
    "time",
] }
tracing-appender = "0.2"
linfa = "0.7.1"
linfa-pls = "0.7.1"
ndarray = "0.15.6"
derive_builder = "0.20.2"
genevo = "0.7"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3"
rayon = "1.10" # For potential future parallelism
directories = "6.0" # For finding cache/config directories
clap = { version = "4.5.37", features = ["derive", "env"] }
actix-web = "4.5"
actix-cors = "0.7"
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0.140" # For testing serialization/deserialization

[profile.release]
codegen-units = 1
strip = true # Smaller binary size
opt-level = 3 # Ensure max optimization
panic = 'abort' # Smaller binary, potentially harder debugging if panic occurs
