[package]
name = "binance-r-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-matrix = {path = "../r-matrix"}
tokio = { version = "1.34", features = ["full"] }
binance-rs-async = { git = "https://github.com/Igosuki/binance-rs-async.git", features = ["margin_api"] }
ta = "0.5"
getset = "0.1"
derive_builder = "0.12"
thiserror = "1.0"
chrono = "0.4"
futures = "0.3"
statrs = "0.16"