[package]
name = "r-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3"
statrs = "0.16"
randomforest = "0.1"
derive_builder = "0.12"
bincode = "1.3"
rayon = "1.8"
dashmap = "5.5"
cmaes = "0.2"
csv = "1.3"

[dev-dependencies]
proptest = "1.4"

[dependencies.plotters]
version = "0.3.5"
features = ["ttf", "ab_glyph"]